Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8870

Save action menu item should not have an icon

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.7.0
    • Qt Creator 2.7.0-beta
    • All Other Issues
    • None
    • OSX
    • ed7e2ce2478d018d88f9741fb012025cf832d5ce

    Description

      A comical floppy disk icon has appeared next to the save action in the right-click menu of the file selector above the editor.

      Contextual menus on OSX should never have icons, let alone icons of 'floppy disks' from 1995!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            danny77uk Daniel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes