Mac: Don't show icons in editor tool bar context menu.

Task-number: QTCREATORBUG-8870

Change-Id: I41022e9b0156f4ec6a6802501ec1d5b9eadb87b7
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>